--- a/English.lproj/MainMenu.xib
+++ b/English.lproj/MainMenu.xib
@@ -10,7 +10,7 @@
 			<bool key="EncodedWithXMLCoder">YES</bool>
 			<integer value="517"/>
 			<integer value="29"/>
-			<integer value="442"/>
+			<integer value="371"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -1332,13 +1332,6 @@ AAAAAAAAAAAAAA</bytes>
 												<object class="IKImageView" id="23109399">
 													<reference key="NSNextResponder" ref="734287561"/>
 													<int key="NSvFlags">274</int>
-													<object class="NSMutableSet" key="NSDragTypes">
-														<bool key="EncodedWithXMLCoder">YES</bool>
-														<object class="NSArray" key="set.sortedObjects">
-															<bool key="EncodedWithXMLCoder">YES</bool>
-															<string>NSFilenamesPboardType</string>
-														</object>
-													</object>
 													<string key="NSFrame">{{20, 20}, {600, 327}}</string>
 													<reference key="NSSuperview" ref="734287561"/>
 													<bool key="NSViewIsLayerTreeHost">YES</bool>
@@ -1352,9 +1345,9 @@ AAAAAAAAAAAAAA</bytes>
 													<bool key="hasHorizontalScroller">NO</bool>
 													<bool key="hasVerticalScroller">NO</bool>
 													<bool key="autohidesScrollers">NO</bool>
-													<bool key="supportsDragAndDrop">YES</bool>
+													<bool key="supportsDragAndDrop">NO</bool>
 													<bool key="editable">NO</bool>
-													<bool key="doubleClickOpensImageEditPanel">YES</bool>
+													<bool key="doubleClickOpensImageEditPanel">NO</bool>
 													<object class="NSColor" key="backgroundColor">
 														<int key="NSColorSpace">2</int>
 														<bytes key="NSRGB">MCAwIDAAA</bytes>
@@ -1605,7 +1598,7 @@ AAAAAAAAAAAAAA</bytes>
 													<reference key="NSTarget" ref="464925201"/>
 													<string key="NSAction">_doScroller:</string>
 													<double key="NSCurValue">1.000000e+00</double>
-													<double key="NSPercent">9.966832e-01</double>
+													<double key="NSPercent">9.983974e-01</double>
 												</object>
 												<object class="NSClipView" id="247911839">
 													<reference key="NSNextResponder" ref="464925201"/>
@@ -2224,6 +2217,14 @@ AAAAAAAAAAAAAA</bytes>
 						<reference key="destination" ref="1060619802"/>
 					</object>
 					<int key="connectionID">557</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">groupSelected:</string>
+						<reference key="source" ref="1014"/>
+						<reference key="destination" ref="696521058"/>
+					</object>
+					<int key="connectionID">562</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -2955,11 +2956,6 @@ AAAAAAAAAAAAAA</bytes>
 						<reference key="parent" ref="464925201"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">478</int>
-						<reference key="object" ref="232544258"/>
-						<reference key="parent" ref="721542"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">485</int>
 						<reference key="object" ref="205582395"/>
 						<object class="NSMutableArray" key="children">
@@ -3112,6 +3108,11 @@ AAAAAAAAAAAAAA</bytes>
 						<int key="objectID">554</int>
 						<reference key="object" ref="1060619802"/>
 						<reference key="parent" ref="205582395"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">478</int>
+						<reference key="object" ref="232544258"/>
+						<reference key="parent" ref="721542"/>
 					</object>
 				</object>
 			</object>
@@ -3453,7 +3454,7 @@ AAAAAAAAAAAAAA</bytes>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<reference ref="9"/>
 					<string>{{525, 802}, {197, 73}}</string>
-					<string>{{220, 735}, {410, 20}}</string>
+					<string>{{193, 735}, {410, 20}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<reference ref="9"/>
 					<string>{74, 862}</string>
@@ -3482,11 +3483,11 @@ AAAAAAAAAAAAAA</bytes>
 					<reference ref="9"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<reference ref="9"/>
-					<string>{{210, 169}, {640, 508}}</string>
+					<string>{{17, 169}, {640, 508}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<reference ref="8"/>
 					<reference ref="8"/>
-					<string>{{210, 169}, {640, 508}}</string>
+					<string>{{17, 169}, {640, 508}}</string>
 					<reference ref="9"/>
 					<string>{{238, 285}, {480, 360}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3504,7 +3505,7 @@ AAAAAAAAAAAAAA</bytes>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{222, 677}, {616, 0}}</string>
+					<string>{{29, 677}, {616, 0}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3521,9 +3522,9 @@ AAAAAAAAAAAAAA</bytes>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{572, 173}, {276, 399}}</string>
+					<string>{{327, 173}, {276, 399}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{572, 173}, {276, 399}}</string>
+					<string>{{327, 173}, {276, 399}}</string>
 					<reference ref="9"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3582,7 +3583,7 @@ AAAAAAAAAAAAAA</bytes>
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">559</int>
+			<int key="maxID">562</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -3639,12 +3640,14 @@ AAAAAAAAAAAAAA</bytes>
 						<object class="NSMutableArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>autogroupItems:</string>
+							<string>groupSelected:</string>
 							<string>menuOpen:</string>
 							<string>removeSelected:</string>
 							<string>toggleExifPanel:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
